--- a/portfolio5.html
+++ b/portfolio5.html
@@ -24,7 +24,7 @@
     <!-- HEADER -->
     <header class="type-2">
         <div class="header-wrapper">
-            <a id="logo" href="index1.html"><img src="img/logo.png" alt="" /></a>
+            <a id="logo" href="index.html"><img src="img/logo.png" alt="" /></a>
             <div class="hamburger-icon">
                 <span></span>
                 <span></span>
@@ -42,10 +42,10 @@
            <nav>
                 <ul>
                     <li>
-                        <a href="index1.html">Home</a>
+                        <a href="index.html">Home</a>
                         <div class="toggle-menu"></div>
                         <ul>
-                            <li><a href="index1.html">Homepage 1</a></li>
+                            <li><a href="index.html">Homepage 1</a></li>
                             <li><a href="index2.html">Homepage 2</a></li>
                             
                             <li><a href="index8.html">Homepage 3</a></li>
