--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a href="index1.html">Home</a>
                         <div class="toggle-menu"></div>
                         <ul>
-                            <li><a href="index1.html">Homepage 1</a></li>
+                            <li><a href="index.html">Homepage 1</a></li>
                             <li><a href="index2.html">Homepage 2</a></li>
                             
                             <li><a href="index8.html">Homepage 3</a></li>
